# as-mcp-cli

./: .gitignore  README.md  pyproject.toml  setup.py
src/as_mcp_cli/: __init__.py  auth.py  cli.py
